name:                dhaml
version:             0.1.0.0
homepage:            https://github.com/robbiemcmichael/dhaml#readme
license:             BSD3
license-file:        LICENSE
author:              Robbie McMichael
maintainer:          Robbie McMichael
copyright:           2019 Robbie McMichael
category:            YAML
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src

  exposed-modules:
    Dhaml.Dhall
    Dhaml.Internal

  build-depends:
      base         >= 4.7 && < 5
    , aeson        >= 1.4.6.0
    , bytestring
    , conduit
    , dhall        >= 1.26.0
    , dhall-json   >= 1.4.1
    , exceptions
    , libyaml
    , resourcet
    , text
    , transformers
    , yaml         >= 0.11.2.0

executable dhaml
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      exe
  main-is:             Dhaml.hs

  build-depends:
      base
    , bytestring
    , conduit
    , dhaml
    , filepath
    , libyaml
    , optparse-applicative
    , text
